--- a/main/index.html
+++ b/main/index.html
@@ -16,11 +16,23 @@
 <script type="text/javascript">
 function myFunction() {
   let body = document.getElementsByTagName('body');
+  let h3 = document.getElementsByTagName('h3');
   for(let i = 0; i < body.length; i++){
-    if ( body[i].style.backgroundColor != 'whitesmoke')
+    if ( body[i].style.backgroundColor != 'whitesmoke'){
     body[i].style.backgroundColor = 'whitesmoke';
-    else
+    for(let i = 0; i < h3.length; i++){
+      h3[i].style.color = 'black';
+    }
+    document.getElementsByClassName('dark')[0].style.color = 'black';
+    document.getElementsByClassName('attribution')[0].style.color = 'black';
+    }else{
     body[i].style.backgroundColor = 'hsl(230, 17%, 14%)';
+    for(let i = 0; i < h3.length; i++){
+      h3[i].style.color = 'white';
+    }
+    document.getElementsByClassName('dark')[0].style.color = 'white';
+    document.getElementsByClassName('attribution')[0].style.color = 'black';
+    }
   }
 }
 </script>
