--- a/main/index.html
+++ b/main/index.html
@@ -31,7 +31,7 @@ function myFunction() {
       h3[i].style.color = 'white';
     }
     document.getElementsByClassName('dark')[0].style.color = 'white';
-    document.getElementsByClassName('attribution')[0].style.color = 'black';
+    document.getElementsByClassName('attribution')[0].style.color = 'white';
     }
   }
 }
